[gd_scene load_steps=62 format=3 uid="uid://c8qg5tevuwe3c"]

[ext_resource type="FontFile" uid="uid://b7fn516ji5c5s" path="res://demo/monogram-extended.ttf" id="1_gbm7q"]
[ext_resource type="Texture2D" uid="uid://b1e23gj3k1klg" path="res://addons/input_prompts/icons/pixel/xbox/a.png" id="2_bykxj"]
[ext_resource type="Script" path="res://addons/input_prompts/action_prompt/action_prompt.gd" id="3_m33nw"]
[ext_resource type="Texture2D" uid="uid://deib2tqcg5df0" path="res://addons/input_prompts/icons/pixel/xbox/x.png" id="4_0xav8"]
[ext_resource type="Script" path="res://addons/input_prompts/joypad_motion_prompt/joypad_motion_prompt.gd" id="5_dyjlc"]
[ext_resource type="Script" path="res://addons/input_prompts/joypad_button_prompt/joypad_button_prompt.gd" id="5_u2ush"]
[ext_resource type="Texture2D" uid="uid://da31wttes8ivy" path="res://addons/input_prompts/icons/pixel/xbox/left_stick_left.png" id="5_xj8m5"]
[ext_resource type="Script" path="res://addons/input_prompts/key_prompt/key_prompt.gd" id="6_u6tgr"]
[ext_resource type="Texture2D" uid="uid://cgewywntwad6e" path="res://addons/input_prompts/icons/pixel/xbox/right_stick_right.png" id="7_wynu7"]
[ext_resource type="Script" path="res://addons/input_prompts/mouse_button_prompt/mouse_button_prompt.gd" id="8_rlfy8"]
[ext_resource type="Texture2D" uid="uid://ei5tpuh570dp" path="res://addons/input_prompts/icons/pixel/keyboard/esc.png" id="8_xbspm"]
[ext_resource type="Texture2D" uid="uid://c3lq40m0un2vi" path="res://addons/input_prompts/icons/pixel/keyboard/backspace.png" id="10_nvluf"]
[ext_resource type="Texture2D" uid="uid://d0bfvcxip20dc" path="res://addons/input_prompts/icons/pixel/mouse/left.png" id="11_3twym"]
[ext_resource type="Script" path="res://demo/option_button.gd" id="11_87wem"]
[ext_resource type="Texture2D" uid="uid://bkgtieikd4hrg" path="res://addons/input_prompts/icons/pixel/mouse/wheel_down.png" id="13_wuk6u"]
[ext_resource type="Texture2D" uid="uid://dv0r0pf7dwijj" path="res://addons/input_prompts/icons/pixel/xbox/b.png" id="15_5uf0l"]
[ext_resource type="Texture2D" uid="uid://c6b88da2bl26p" path="res://addons/input_prompts/icons/pixel/xbox/up.png" id="16_6gg7p"]
[ext_resource type="Texture2D" uid="uid://b381hogwff71v" path="res://addons/input_prompts/icons/pixel/xbox/left.png" id="17_rjfq7"]
[ext_resource type="Texture2D" uid="uid://cq20ry6lvvj3" path="res://addons/input_prompts/icons/pixel/xbox/down.png" id="18_2le72"]
[ext_resource type="Texture2D" uid="uid://bsi68uuv6g8gg" path="res://addons/input_prompts/icons/pixel/xbox/right.png" id="19_ik7y4"]
[ext_resource type="Texture2D" uid="uid://c5mosanv2dr1f" path="res://addons/input_prompts/icons/pixel/xbox/left_stick_up.png" id="20_8s8wu"]
[ext_resource type="Texture2D" uid="uid://d0khkrwby8k25" path="res://addons/input_prompts/icons/pixel/xbox/left_stick_down.png" id="21_at8er"]
[ext_resource type="Texture2D" uid="uid://di22retw8uo1x" path="res://addons/input_prompts/icons/pixel/xbox/left_stick_right.png" id="22_1iulx"]

[sub_resource type="FontVariation" id="FontVariation_py8b3"]
base_font = ExtResource("1_gbm7q")
spacing_space = -2
spacing_top = -2
spacing_bottom = -2

[sub_resource type="Theme" id="Theme_2j0l8"]
default_font = SubResource("FontVariation_py8b3")
default_font_size = 16

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_s28pd"]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_jijo4"]
button_index = 2

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_mlaax"]
axis_value = -1.0

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_qwwcu"]
axis = 2
axis_value = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_61dna"]
keycode = 4194305

[sub_resource type="InputEventKey" id="InputEventKey_3462r"]
keycode = 4194308

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_h2fso"]
button_index = 1

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_83hcr"]
button_index = 5

[sub_resource type="InputEventKey" id="InputEventKey_ouvm8"]
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_ljdtq"]
keycode = 4194310

[sub_resource type="InputEventKey" id="InputEventKey_j218l"]
keycode = 32
unicode = 32

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_5psy2"]

[sub_resource type="InputEventKey" id="InputEventKey_jmrrd"]
keycode = 4194305

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_deurh"]
button_index = 1

[sub_resource type="InputEventKey" id="InputEventKey_c8i2d"]
keycode = 4194320

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_8hto1"]
button_index = 11

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_vj3cm"]
axis = 1
axis_value = -1.0

[sub_resource type="InputEventKey" id="InputEventKey_j8wow"]
keycode = 4194319

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_oynh3"]
button_index = 13

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_1xu2a"]
axis_value = -1.0

[sub_resource type="InputEventKey" id="InputEventKey_m4xol"]
keycode = 4194322

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_hg6yx"]
button_index = 12

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_0b3g1"]
axis = 1
axis_value = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_q8wil"]
keycode = 4194321

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_3pqw0"]
button_index = 14

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_5u677"]
axis_value = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_pyw18"]
device = -1
keycode = 87
unicode = 119

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_n1fdb"]
axis = 1
axis_value = -1.0

[sub_resource type="InputEventKey" id="InputEventKey_osri6"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_uw65i"]
axis_value = -1.0

[sub_resource type="InputEventKey" id="InputEventKey_7agrv"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_be4ob"]
axis = 1
axis_value = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_llb06"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_2f0wh"]
axis_value = 1.0

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_f11i0"]
button_index = 1

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_m8qlr"]

[node name="Demo" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2j0l8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InputEvent" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/InputEvent"]
layout_mode = 2
text = "Most nodes display prompts based on an InputEvent:"

[node name="JoypadButtonPrompts" type="HBoxContainer" parent="VBoxContainer/InputEvent"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/InputEvent/JoypadButtonPrompts"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "JoypadButtonPrompt: "
horizontal_alignment = 2

[node name="JoypadButtonPrompt" type="TextureRect" parent="VBoxContainer/InputEvent/JoypadButtonPrompts"]
layout_mode = 2
texture = ExtResource("2_bykxj")
stretch_mode = 5
script = ExtResource("5_u2ush")
button = 0
icon = 0
events = Array[InputEvent]([SubResource("InputEventJoypadButton_s28pd")])

[node name="JoypadButtonPrompt2" type="TextureRect" parent="VBoxContainer/InputEvent/JoypadButtonPrompts"]
layout_mode = 2
texture = ExtResource("4_0xav8")
stretch_mode = 5
script = ExtResource("5_u2ush")
button = 2
icon = 0
events = Array[InputEvent]([SubResource("InputEventJoypadButton_jijo4")])

[node name="JoypadMotionPrompts" type="HBoxContainer" parent="VBoxContainer/InputEvent"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/InputEvent/JoypadMotionPrompts"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "JoypadMotionPrompt: "
horizontal_alignment = 2

[node name="JoypadMotionPrompt" type="TextureRect" parent="VBoxContainer/InputEvent/JoypadMotionPrompts"]
layout_mode = 2
texture = ExtResource("5_xj8m5")
stretch_mode = 5
script = ExtResource("5_dyjlc")
axis = 0
axis_value = -1
icon = 0
events = Array[InputEvent]([SubResource("InputEventJoypadMotion_mlaax")])

[node name="JoypadMotionPrompt2" type="TextureRect" parent="VBoxContainer/InputEvent/JoypadMotionPrompts"]
layout_mode = 2
texture = ExtResource("7_wynu7")
stretch_mode = 5
script = ExtResource("5_dyjlc")
axis = 2
axis_value = 1
icon = 0
events = Array[InputEvent]([SubResource("InputEventJoypadMotion_qwwcu")])

[node name="KeyPrompts" type="HBoxContainer" parent="VBoxContainer/InputEvent"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/InputEvent/KeyPrompts"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "KeyPrompt: "
horizontal_alignment = 2

[node name="KeyPrompt" type="TextureRect" parent="VBoxContainer/InputEvent/KeyPrompts"]
layout_mode = 2
texture = ExtResource("8_xbspm")
stretch_mode = 5
script = ExtResource("6_u6tgr")
key = 4194305
events = Array[InputEvent]([SubResource("InputEventKey_61dna")])

[node name="KeyPrompt2" type="TextureRect" parent="VBoxContainer/InputEvent/KeyPrompts"]
layout_mode = 2
texture = ExtResource("10_nvluf")
stretch_mode = 5
script = ExtResource("6_u6tgr")
key = 4194308
events = Array[InputEvent]([SubResource("InputEventKey_3462r")])

[node name="MouseButtonPrompts" type="HBoxContainer" parent="VBoxContainer/InputEvent"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/InputEvent/MouseButtonPrompts"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "MouseButtonPrompt: "
horizontal_alignment = 2

[node name="MouseButtonPrompt" type="TextureRect" parent="VBoxContainer/InputEvent/MouseButtonPrompts"]
layout_mode = 2
texture = ExtResource("11_3twym")
stretch_mode = 5
script = ExtResource("8_rlfy8")
button = 1
events = Array[InputEvent]([SubResource("InputEventMouseButton_h2fso")])

[node name="MouseButtonPrompt2" type="TextureRect" parent="VBoxContainer/InputEvent/MouseButtonPrompts"]
layout_mode = 2
texture = ExtResource("13_wuk6u")
stretch_mode = 5
script = ExtResource("8_rlfy8")
button = 5
events = Array[InputEvent]([SubResource("InputEventMouseButton_83hcr")])

[node name="ActionPrompt" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2
text = "ActionPrompt nodes display prompts based on the InputMap and an icon preference. When set to \"Automatic\", the prompts update to match the input device."
autowrap_mode = 3

[node name="ui_accept" type="HBoxContainer" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt/ui_accept"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "ui_accept:"
horizontal_alignment = 2

[node name="ActionPrompt" type="TextureRect" parent="VBoxContainer/ActionPrompt/ui_accept"]
layout_mode = 2
texture = ExtResource("2_bykxj")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "ui_accept"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_ouvm8"), SubResource("InputEventKey_ljdtq"), SubResource("InputEventKey_j218l"), SubResource("InputEventJoypadButton_5psy2")])

[node name="ui_cancel" type="HBoxContainer" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt/ui_cancel"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "ui_cancel:"
horizontal_alignment = 2

[node name="ActionPrompt" type="TextureRect" parent="VBoxContainer/ActionPrompt/ui_cancel"]
layout_mode = 2
texture = ExtResource("15_5uf0l")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "ui_cancel"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_jmrrd"), SubResource("InputEventJoypadButton_deurh")])

[node name="ui_directions" type="HBoxContainer" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt/ui_directions"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "ui_up (and others):"
horizontal_alignment = 2

[node name="ActionPrompt" type="TextureRect" parent="VBoxContainer/ActionPrompt/ui_directions"]
layout_mode = 2
texture = ExtResource("16_6gg7p")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "ui_up"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_c8i2d"), SubResource("InputEventJoypadButton_8hto1"), SubResource("InputEventJoypadMotion_vj3cm")])

[node name="ActionPrompt2" type="TextureRect" parent="VBoxContainer/ActionPrompt/ui_directions"]
layout_mode = 2
texture = ExtResource("17_rjfq7")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "ui_left"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_j8wow"), SubResource("InputEventJoypadButton_oynh3"), SubResource("InputEventJoypadMotion_1xu2a")])

[node name="ActionPrompt3" type="TextureRect" parent="VBoxContainer/ActionPrompt/ui_directions"]
layout_mode = 2
texture = ExtResource("18_2le72")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "ui_down"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_m4xol"), SubResource("InputEventJoypadButton_hg6yx"), SubResource("InputEventJoypadMotion_0b3g1")])

[node name="ActionPrompt4" type="TextureRect" parent="VBoxContainer/ActionPrompt/ui_directions"]
layout_mode = 2
texture = ExtResource("19_ik7y4")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "ui_right"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_q8wil"), SubResource("InputEventJoypadButton_3pqw0"), SubResource("InputEventJoypadMotion_5u677")])

[node name="move" type="HBoxContainer" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt/move"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "move_up (and others):"
horizontal_alignment = 2

[node name="ActionPrompt" type="TextureRect" parent="VBoxContainer/ActionPrompt/move"]
layout_mode = 2
texture = ExtResource("20_8s8wu")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "move_up"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_pyw18"), SubResource("InputEventJoypadMotion_n1fdb")])

[node name="ActionPrompt2" type="TextureRect" parent="VBoxContainer/ActionPrompt/move"]
layout_mode = 2
texture = ExtResource("5_xj8m5")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "move_left"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_osri6"), SubResource("InputEventJoypadMotion_uw65i")])

[node name="ActionPrompt3" type="TextureRect" parent="VBoxContainer/ActionPrompt/move"]
layout_mode = 2
texture = ExtResource("21_at8er")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "move_down"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_7agrv"), SubResource("InputEventJoypadMotion_be4ob")])

[node name="ActionPrompt4" type="TextureRect" parent="VBoxContainer/ActionPrompt/move"]
layout_mode = 2
texture = ExtResource("22_1iulx")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "move_right"
icon = 0
events = Array[InputEvent]([SubResource("InputEventKey_llb06"), SubResource("InputEventJoypadMotion_2f0wh")])

[node name="interact" type="HBoxContainer" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt/interact"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "interact:"
horizontal_alignment = 2

[node name="ActionPrompt" type="TextureRect" parent="VBoxContainer/ActionPrompt/interact"]
layout_mode = 2
texture = ExtResource("2_bykxj")
stretch_mode = 5
script = ExtResource("3_m33nw")
action = "interact"
icon = 0
events = Array[InputEvent]([SubResource("InputEventMouseButton_f11i0"), SubResource("InputEventJoypadButton_m8qlr")])

[node name="Options" type="HBoxContainer" parent="VBoxContainer/ActionPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ActionPrompt/Options"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Preferred Icons:"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ActionPrompt/Options"]
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "Automatic"
popup/item_0/id = 0
popup/item_1/text = "Xbox"
popup/item_1/id = 1
popup/item_2/text = "Sony"
popup/item_2/id = 2
popup/item_3/text = "Nintendo"
popup/item_3/id = 3
popup/item_4/text = "Keyboard"
popup/item_4/id = 4
script = ExtResource("11_87wem")

[connection signal="item_selected" from="VBoxContainer/ActionPrompt/Options/OptionButton" to="VBoxContainer/ActionPrompt/Options/OptionButton" method="_on_item_selected"]
